feat(service-user):新增用户中心模块基础结构，暂未实现功能

--- a/lib-gateway/src/main/resources/application-route.yml
+++ b/lib-gateway/src/main/resources/application-route.yml
@@ -2,3 +2,7 @@ spring:
   cloud:
     gateway:
       routes:
+        - id: service-user
+          uri: lb://service-user
+          predicates:
+            - Path=/api/user/**
