--- a/lib-services/pom.xml
+++ b/lib-services/pom.xml
@@ -10,6 +10,7 @@
     </parent>
     <packaging>pom</packaging>
     <modules>
+        <module>service-user</module>
     </modules>
 
     <artifactId>lib-services</artifactId>
