--- a/lib-services/service-user/pom.xml
+++ b/lib-services/service-user/pom.xml
@@ -5,11 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.kane</groupId>
-        <artifactId>ZhiCloudLib-backend</artifactId>
+        <artifactId>lib-services</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>lib-gateway</artifactId>
+    <artifactId>service-user</artifactId>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
@@ -18,20 +18,10 @@
     </properties>
 
     <dependencies>
-        <!-- Spring Cloud Alibaba服务发现 -->
+
         <dependency>
-            <groupId>com.alibaba.cloud</groupId>
-            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
-        </dependency>
-        <!-- 网关 -->
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-gateway</artifactId>
-        </dependency>
-        <!-- 负载均衡 -->
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-loadbalancer</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
     </dependencies>
 
