--- a/lib-services/pom.xml
+++ b/lib-services/pom.xml
@@ -28,6 +28,11 @@
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.kane</groupId>
+            <artifactId>lib-common</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
