--- a/pom.xml
+++ b/pom.xml
@@ -24,12 +24,12 @@
 
         <java.version>21</java.version>
         <jwt.version>4.4.0</jwt.version>
-        <shiro.version>2.1.0</shiro.version>
         <redis.version>3.5.0</redis.version>
         <mysql.version>8.0.30</mysql.version>
         <mybatis-plus.version>3.5.9</mybatis-plus.version>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
+        <aspectj.version>1.9.7</aspectj.version>
         <project.version>0.0.1-SNAPSHOT</project.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring-cloud.version>2023.0.3</spring-cloud.version>
@@ -62,13 +62,6 @@
             </dependency>
 
             <dependency>
-                <groupId>org.apache.shiro</groupId>
-                <artifactId>shiro-spring-boot-starter</artifactId>
-                <version>${shiro.version}</version>
-                <scope>compile</scope>
-            </dependency>
-
-            <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-data-redis</artifactId>
                 <version>${redis.version}</version>
@@ -91,6 +84,12 @@
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
                 <version>${mysql.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.aspectj</groupId>
+                <artifactId>aspectjweaver</artifactId>
+                <version>${aspectj.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
