fix:修复因日志依赖导致service-ai不能启动的问题，网关无法转发service-ai接口问题

--- a/lib-gateway/src/main/resources/application-route.yml
+++ b/lib-gateway/src/main/resources/application-route.yml
@@ -6,3 +6,7 @@ spring:
           uri: lb://service-user
           predicates:
             - Path=/api/user/**
+        - id: service-ai
+          uri: lb://service-ai
+          predicates:
+            - Path=/api/ai/**
