--- a/lib-services/service-ai/src/main/resources/application.yml
+++ b/lib-services/service-ai/src/main/resources/application.yml
@@ -11,3 +11,16 @@ spring:
         password: nacos
 server:
   port: 7010
+
+springdoc:
+  api-docs:
+    enabled: true
+    path: /v3/api-docs
+  swagger-ui:
+    enabled: true
+    path: /swagger-ui.html
+
+knife4j:
+  enable: true
+  setting:
+    language: zh_cn
