--- a/lib-services/service-user/src/main/resources/application.yml
+++ b/lib-services/service-user/src/main/resources/application.yml
@@ -22,3 +22,16 @@ mybatis-plus:
   mapper-locations: classpath*:mapper/*.xml
 server:
   port: 7000
+
+springdoc:
+  api-docs:
+    enabled: true
+    path: /v3/api-docs
+  swagger-ui:
+    enabled: true
+    path: /swagger-ui.html
+
+knife4j:
+  enable: true
+  setting:
+    language: zh_cn
