feat:新增OpenFeign调用更新图书信息

--- a/lib-gateway/src/main/resources/application-route.yml
+++ b/lib-gateway/src/main/resources/application-route.yml
@@ -10,3 +10,7 @@ spring:
           uri: lb://service-ai
           predicates:
             - Path=/api/ai/**
+        - id: service-book
+          uri: lb://service-book
+          predicates:
+            - Path=/api/book/**
