--- a/lib-services/service-book/src/main/resources/application.yml
+++ b/lib-services/service-book/src/main/resources/application.yml
@@ -12,6 +12,12 @@ spring:
     url: jdbc:mysql://192.168.0.3:3306/library
     username: root
     password: 'Won021220'
+  rabbitmq:
+    host: 192.168.0.3
+    port: 5672
+    username: kane
+    password: Won021220
+    virtual-host: /library
 mybatis-plus:
   mapper-locations: classpath*:mapper/*.xml
 server:
