feat:新增通知模块

--- a/lib-services/pom.xml
+++ b/lib-services/pom.xml
@@ -13,6 +13,7 @@
         <module>service-user</module>
         <module>service-ai</module>
         <module>service-book</module>
+        <module>service-notify</module>
     </modules>
 
     <artifactId>lib-services</artifactId>
