--- a/lib-services/service-book/src/main/resources/application.yml
+++ b/lib-services/service-book/src/main/resources/application.yml
@@ -12,6 +12,10 @@ spring:
     url: jdbc:mysql://192.168.0.3:3306/library
     username: root
     password: 'Won021220'
+  data:
+    redis:
+      host: 192.168.0.3
+      password: Won021220
   rabbitmq:
     host: 192.168.0.3
     port: 5672
@@ -20,6 +24,7 @@ spring:
     virtual-host: /library
 mybatis-plus:
   mapper-locations: classpath*:mapper/*.xml
+  type-aliases-package: com.kane.mapper
 server:
   port: 7020
 
